# dsclim

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.in  THANKS  aclocal.m4  add_license.sh  conf  conf32  confg  confglodata  config.h  config.h.in  config.status  configure  configure.ac  configure.ac.with_szip  doxygen-include.am  doxygen.cfg  libtool  license_code2011.txt  license_code2012.txt  license_code2013.txt  license_code2014.txt  license_code2015.txt  reconf
autom4te.cache/: output.1  traces.0  traces.1
doc/: Makefile.in
etc/: configuration.xml  configuration2.xml  configuration_figdoc.xml  configuration_learning.xml  configuration_learning_climator.xml  configuration_learning_future.xml  configuration_learning_new.xml  configuration_ncep.xml  configuration_v2.xml
lib/: Makefile.am
lib/classif/: Makefile.am
lib/filter/: Makefile.am  filter.c  filter.h  filter_window.c
lib/utils/: alloc_error.c  utils.h
m4/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  compute_secondary_large_scale_diff.c  constants.h  dsclim.c  dsclim.h  find_the_days.c  free_main_data.c  load_conf.c  merge_seasonal_data.c  merge_seasonal_data_2d.c  merge_seasonal_data_i.c  merge_seasons.c  output_downscaled_analog.c  output_downscaled_analog_old.c  read_analog_data.c  read_field_subdomain_period.c  read_large_scale_eof.c  read_large_scale_fields.c  read_learning_fields.c  read_learning_obs_eof.c  read_learning_rea_eof.c  read_mask.c  read_obs_period.c  read_regression_points.c  remove_clim.c  save_analog_data.c  write_learning_fields.c  write_regression_fields.c  wt_downscaling.c  wt_learning.c
src/filter/: Makefile.am
src/lib/: Makefile.am
src/lib/classif/: Makefile.am  class_days_pc_centroids.c  classif.c  classif.h  generate_clusters.c
src/lib/clim/: Makefile.am  clim.h  clim_daily_tserie_climyear.c  remove_seasonal_cycle.c
src/lib/filter/: Makefile.am  filter.h
src/lib/utils/: Makefile.am  utils.h
src/libs/: Makefile.am
src/libs/classif/: Makefile.am  best_clusters.c  class_days_pc_centroids.c  class_days_pc_clusters.c  classif.h  dist_clusters_normctrl.c  generate_clusters.c  mean_variance_dist_clusters.c
src/libs/clim/: Makefile.am  clim.h  clim_daily_tserie_climyear.c  dayofclimyear.c  remove_seasonal_cycle.c
src/libs/filter/: Makefile.am  filter.c  filter.h  filter_window.c
src/libs/io/: Makefile.am  compute_time_info.c  create_netcdf.c  get_attribute_str.c  get_time_attributes.c  get_time_info.c  handle_netcdf_error.c  io.h  read_netcdf_dims_3d.c  read_netcdf_dims_eof.c  read_netcdf_latlon.c  read_netcdf_var_1d.c  read_netcdf_var_2d.c  read_netcdf_var_3d.c  read_netcdf_var_3d_2d.c  read_netcdf_var_generic_1d.c  read_netcdf_var_generic_val.c  read_netcdf_xy.c  write_netcdf_dims_3d.c  write_netcdf_var_3d.c  write_netcdf_var_3d_2d.c
src/libs/misc/: alloc_error.c  banner.c  misc.h
src/libs/pceof/: Makefile.am  normalize_pc.c  pceof.h  project_field_eof.c
src/libs/regress/: Makefile.am  apply_regression.c  regress.c  regress.h
src/libs/utils/: Makefile.am  alloc_error.c  alloc_mmap_double.c  alloc_mmap_float.c  alloc_mmap_int.c  alloc_mmap_longint.c  alloc_mmap_shortint.c  alt_to_press.c  banner.c  calc_etp_mf.c  change_date_origin.c  comparf.c  covariance_fields_spatial.c  data_to_gregorian_cal.c  distance_point.c  extract_subdomain.c  extract_subperiod.c  extract_subperiod_months.c  find_str_value.c  get_calendar.c  get_calendar_ts.c  get_filename_ext.c  is_leap_year.c  mask_points.c  mask_region.c  mean_field_spatial.c  mean_variance_dist_clusters.c  mean_variance_field_spatial.c  normalize_field.c  normalize_field_2d.c  normalize_pc.c  project_field_eof.c  spechum_to_hr.c  sub_period_common.c  time_mean_variance_field_2d.c  utCalendar2_cal.c  utCalendar2_cal.h  utCalendar_cal.c  utCalendar_cal.h  utils.h
src/libs/xml_utils/: Makefile.am  xml_free_config.c  xml_get_node_by_xpath.c  xml_get_setting.c  xml_load_config.c  xml_print_setting.c  xml_utils.h
src/utils/: Makefile.am  banner.c
tests/: Makefile.am  test_mean_variance_dist_clusters.c  test_mean_variance_temperature.c  test_proj_eof.c  testbestclassif.c  testbestclassif_realdata.c  testcalendar.c  testcalendar_val.c  testclassif.c  testfilter  testfilter.c  testfilter_cor.c  testrandomu.c  testregress.c  testudunits.c
trunk/: README  THANKS  conf  conf32  configure.ac  license_code.txt  license_code2010.txt
trunk/etc/: configuration_1.5.5.xml  configuration_1.5.5_boe.xml  configuration_1.5.7.xml  configuration_example1.xml  configuration_example_grid.xml  configuration_example_nongrid.xml  configuration_full.xml  configuration_h.xml  configuration_hourly.xml  configuration_learning_climator.xml  configuration_learning_climator_old.xml  configuration_t.xml
trunk/m4/: ac_doxygen.m4
trunk/src/: compute_secondary_large_scale_diff.c  constants.h  dsclim.c  dsclim.h  find_the_days.c  load_conf.c  merge_seasonal_data.c  merge_seasons.c  output_downscaled_analog_old.c  read_large_scale_eof.c  read_large_scale_fields.c  read_learning_fields.c  read_learning_obs_eof.c  read_learning_rea_eof.c  read_obs_period.c  save_analog_data.c  write_learning_fields.c  wt_downscaling.c  wt_learning.c
trunk/src/libs/: Makefile.am
trunk/src/libs/classif/: Makefile.am  best_clusters.c  class_days_pc_clusters.c  classif.h  generate_clusters.c  mean_variance_dist_clusters.c
trunk/src/libs/clim/: Makefile.am  clim.h
trunk/src/libs/filter/: filter.c  filter.h  filter_window.c
trunk/src/libs/io/: Makefile.am  create_netcdf.c  get_attribute_str.c  io.h  read_netcdf_dims_eof.c  read_netcdf_latlon.c  read_netcdf_var_1d.c  read_netcdf_var_3d.c  read_netcdf_var_3d_2d.c  read_netcdf_var_generic_val.c  write_netcdf_dims_3d.c  write_netcdf_var_3d.c  write_netcdf_var_3d_2d.c
trunk/src/libs/misc/: Makefile.am  alloc_error.c  banner.c  misc.h
trunk/src/libs/pceof/: Makefile.am  normalize_pc.c
trunk/tests/: Makefile.am  test_mean_variance_dist_clusters.c  test_proj_eof.c  testbestclassif.c  testbestclassif_realdata.c  testfilter.c  testrandomu.c  testregress.c
(+23 files in other folders)
