# Copyright (C) 2008 Christian Page <christian.page@cerfacs.fr>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

bin_PROGRAMS = dsclim
dsclim_SOURCES = dsclim.c
dsclim_CPPFLAGS = -I${top_srcdir}/lib/utils -I${top_srcdir}/lib/filter
dsclim_LDADD = ${top_srcdir}/lib/utils/libutils.la ${top_srcdir}/lib/filter/libfilter.la
